--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/
-#spring.jpa.properties.hibernate.default_schema=hibernate
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Aa753159
+spring.datasource.password=qwerty
 
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:schema.sql
+spring.sql.init.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=validate
 
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-#spring.liquibase.enabled=false
+
+
+
+
+
+
+
